--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App V1</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1>Weather App V1</h1>
+    <div class="header"></div>
+    <main>
+        <h1>WEATHER APP VERSION 1</h1>
+        <form action="/" method="post">
+            <label for="cityInput">CITY NAME: </label>
+            <input type="text" name="cityName" id="cityInput">
+            <button type="submit">Search</button>
+        </form>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
